tests/standalone-tests/failing/bad-return-type.lua
local f = function(arg)
	if arg then 
 	       return "text"
	end
	return "text2"
end

local c = f() + 12